# mutils

./: .gitignore  CMakeLists.txt  README.md
include/mutils/: common.hpp  io.hpp  logger.hpp  mutils.hpp  os.hpp  strings.hpp  time.hpp
tests/: CMakeLists.txt  test_mutils.cpp
